# tqvaultc

./: .gitignore  BUILD.md  LICENSE  LOOT.md  PLAN_atlantis_quest_tokens.md  PLAN_stats_manager.md  PROJECT_GOALS.md  README.md  build_number.sh  meson.build
.github/workflows/: release-windows.yml
assets/: style.css  tqvaultc.gresource.xml
cross/: mingw-w64-x86_64.ini
installer/: tqvaultc.nsi
scripts/: build-installer.sh  package-windows.sh
src/: affix_table.c  affix_table.h  arc.c  arc.h  arz.c  arz.h  asset_index.h  asset_lookup.c  asset_lookup.h  character.c  character.h  config.c  config.h  dds_decode.c  dds_decode.h  extract_textures.c  item_stats.c  item_stats.h  item_stats_format.c  main.c  main.vault.json  platform_mmap.c  platform_mmap.h  prefetch.c  prefetch.h  quest_tokens.c  quest_tokens.h  stash.c  stash.h  texture.c  texture.h  translation.c  translation.h  ui.c  ui.h  ui_affix_dialog.c  ui_bag_menu.c  ui_checklist_dialog.c  ui_context_menu.c  ui_database_dialog.c  (+13 more)
src/utils/: check_arc_tags.c  dump_arc_headers  dump_arc_headers.c  dump_arz_record  dump_arz_record.c  dump_chr  dump_chr.c  dump_tex.py  extract_basenames.py  list_arz_records  list_arz_records.c  list_tags.py  test_chr_save.c  tq_chr_tool.c  tq_dbr_tool.c  tq_quest_tool.c  tq_stats.c
vaults/: 01 - Jewels Artifacts Charms Relics Dyes Potions Quests.vault.json  02 - Helms Armbands Greaves.vault.json  02 - Torso.vault.json  03 - Axes Swords 1HRanged Shields.vault.json  03 - Staves Spears Bows Clubs.vault.json
